--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
  {
     "RTSP_LINK": "rtsp://admin:V12345678v@192.168.0.64:554/Streaming/Channels/101",
     "SPACE_LIMIT": 30,
-    "INTERVAL": 10,
-    "SLICE_DURATION": 30,
-    "CONCAT_INTERVAL": 30
+    "SPACE_CHECK_INTERVAL": 10,
+    "SLICE_DURATION": 5,
+    "CONCAT_INTERVAL": 1
  }
