--- a/config.json
+++ b/config.json
@@ -1,7 +1,16 @@
  {
-    "RTSP_LINK": "rtsp://admin:V12345678v@192.168.0.64:554/Streaming/Channels/101",
+    "RTSP_LINKS": [
+      { 
+         "link":"rtsp://admin:admin@192.168.0.64:554/Streaming/Channels/101",
+          "name":"window" 
+      },
+      {
+         "link":"rtsp://213.3.38.11/axis-media/media.amp", 
+         "name":"axis" 
+      }
+   ],
     "SPACE_LIMIT": 30,
-    "SPACE_CHECK_INTERVAL": 10,
-    "SLICE_DURATION": 5,
-    "CONCAT_INTERVAL": 1
+    "SPACE_CHECK_INTERVAL": 15,
+    "SLICE_DURATION": 10,
+    "CONCAT_INTERVAL": 30
  }
