--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "camera archive recording",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
+    "start": "node init.js",
+    "dev": "nodemon init.js",
     "clean": "node cleanup.js",
     "kill": "killall -9 node"
   },
@@ -16,6 +16,7 @@
     "fast-folder-size": "^1.6.1",
     "moment": "^2.29.1",
     "mv": "^2.1.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "tree-kill": "^1.2.2"
   }
 }
