--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
  {
     "RTSP_LINKS": [
       { 
-         "link":"rtsp://admin:admin@192.168.0.64:554/Streaming/Channels/101",
+         "link":"rtsp://admin:V12345678v@192.168.0.64:554/Streaming/Channels/101",
           "name":"window" 
       },
       {
@@ -9,7 +9,7 @@
          "name":"axis" 
       }
    ],
-    "SPACE_LIMIT": 30,
+    "SPACE_LIMIT": 20,
     "SPACE_CHECK_INTERVAL": 15,
     "SLICE_DURATION": 10,
     "CONCAT_INTERVAL": 30
